<resources>
    <string name="app_name">Fleatmarkert</string>
    <string name="themeList">商品列表</string>
    <string name="loginMessage">请登录</string>
    <string name="postManageButton">商品管理</string>
    <string name="registMessage">请填入注册信息</string>
    <string name="usernameMessage">用户名</string>
    <string name="passwordMessage">密码</string>
    <string name="signInButton">登录</string>
    <string name="signUpButton">注册</string>
    <string name="repasswordMessage">再输入密码</string>
    <string name="myPostMessage">我的商品</string>
    <string name="addButtonMessage">添加商品</string>
    <string name="titleMessage">标题</string>
    <string name="contentMessage">内容及联系方式</string>
    <string name="submitMessage">提交</string>
    <string name="deleteMessage">删除</string>
    <string name="showMessage">查看</string>
    <string name="editMessage">编辑</string>
</resources>
