<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginButton"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bc">

    <TextView
        android:id="@+id/loginText"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="24dp"
        android:text="@string/loginMessage"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/usernameText"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="180dp"
        android:ems="10"
        android:inputType="text"
        android:rotation="0"
        android:scaleX="1"
        android:scaleY="1"
        android:singleLine="true"
        android:textColor="#969696"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="240dp"
        android:ems="10"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColor="#969696"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/usernameView"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="180dp"
        android:text="@string/usernameMessage"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/passwordView"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="240dp"
        android:text="@string/passwordMessage"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="155dp"
        android:layout_marginTop="340dp"
        android:backgroundTint="#03A9F4"
        android:shadowColor="#8D8D8D"
        android:text="@string/signInButton"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="155dp"
        android:layout_marginTop="400dp"
        android:backgroundTint="#03A9F4"
        android:shadowColor="#8D8D8D"
        android:text="@string/signUpButton"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>